suppression of differents folders no used

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.4.6",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@types/react-big-calendar": "^1.16.2",
+    "date-fns": "^4.1.0",
     "install": "^0.13.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.523.0",
-    "moment": "^2.30.1",
     "next": "15.3.4",
     "npm": "^11.4.2",
     "react": "^19.1.0",
@@ -21,11 +24,13 @@
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-slideshow-image": "^4.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4"
