--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/bundle-analyzer": "^15.4.6",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@types/react-big-calendar": "^1.16.2",
+    "@vercel/speed-insights": "^1.3.1",
     "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
