--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "name": "happy-science-vitrine",
-  "alias": ["happyscience-vitrine.vercel.app", "www.happyscience-vitrine.com"],
-  
+  "name": "ccjbenin",
+  "alias": ["ccjbenin.vercel.app", "www.ccjbenin.com"],
+
   "builds": [
     {
       "src": "package.json",
@@ -12,8 +12,8 @@
   
   "env": {
     "NODE_ENV": "production",
-    "NEXT_PUBLIC_APP_URL": "https://happyscience-vitrine.vercel.app",
-    "NEXT_PUBLIC_STRAPI_URL": "https://happyscience-7c38f3ffe9.strapi.cloud"
+    "NEXT_PUBLIC_APP_URL": "https://ccjbenin.vercel.app",
+    "NEXT_PUBLIC_STRAPI_URL": "https://ccjbenin-7c38f3ffe9.strapi.cloud"
   },
   
   "regions": ["cdg1"],
