--- a/vercel.json
+++ b/vercel.json
@@ -13,12 +13,12 @@
   "env": {
     "NODE_ENV": "production",
     "NEXT_PUBLIC_APP_URL": "https://ccjbenin.vercel.app",
-    "NEXT_PUBLIC_STRAPI_URL": "https://ccjbenin-7c38f3ffe9.strapi.cloud"
+    "NEXT_PUBLIC_STRAPI_URL": "https://heroic-bubble-fbaaad5906.strapiapp.com/admin"
   },
   
   "regions": ["cdg1"],
   
-  "public": true,
+  "public": false,
   
   "github": {
     "enabled": true,
